--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-pip
-flask==2.2.5
-tensorflow==2.3.0
-numpy==1.21.6
-Pillow==9.5.0
+flask==2.0.1
+tensorflow==2.7.0
 protobuf==3.19.0
-
+numpy==1.21.2
+Pillow==8.3.1
+gevent==21.8.0
+gunicorn==20.1.0
 
